--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.53",
     "axios": "^0.19.2",
+    "cookie": "^0.4.1",
     "next": "9.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "swr": "^0.2.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.0",
     "@types/node": "^13.13.5",
     "@types/react": "^16.9.35",
     "typescript": "^3.8.3"
