--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start --port $PORT"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.14",
