--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.17.6",
     "@types/node": "^13.13.5",
     "@types/react": "^16.9.35",
+    "isomorphic-unfetch": "^3.0.0",
     "typescript": "^3.8.3"
   }
 }
