--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "node server.js -p $PORT",
     "build": "next build",
-    "start": "node server.js NODE_ENV=production node -p $PORT"
+    "start": "NODE_ENV=production node server.js -p $PORT"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.14",
