removed custom server from package.json and added getInitialProps in profile page

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "node": "12.16.3"
   },
   "scripts": {
-    "dev": "node server.js -p $PORT",
+    "dev": "next",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js -p $PORT"
+    "start": "next start -p $PORT"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.14",
