--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=http://localhost:4000
+NEXT_PUBLIC_API_URL=https://nest-flix-server.herokuapp.com
 NEXT_PUBLIC_APP_URL=http://localhost:3000
