--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.19.2",
     "cookie": "^0.4.1",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.4",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.4.0",
     "react": "16.13.1",
