--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.4",
     "isomorphic-unfetch": "^3.0.0",
+    "material-ui-image": "^3.2.3",
     "next": "9.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
